# data-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: main.py  setup.py
src/validator/: global_validator.py  validator.py  value_validator.py  values_validator.py
src/validator/validation/: column_validator.py  value_validator.py
tests/: proto.py
tests/unit/: test_column_validator.py  test_value_validator.py
