[tool.poetry]
name = "data-validator"
version = "0.1.0"
description = "A practice project, creating a simple data validation framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
